--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,26 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Spring Boot Starter Web (déjà présent normalement) -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+	    <!-- ✅ JPA / Hibernate -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
 		<dependency>
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+		<!-- PostgreSQL driver -->
+    	<dependency>
+       		 <groupId>org.postgresql</groupId>
+      		 <artifactId>postgresql</artifactId>
+      		 <scope>runtime</scope>
+   		 </dependency>
 	</dependencies>
 
 	<build>
