--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=report-api
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportdb
-spring.datasource.username=postgres
-spring.datasource.password=postgresql
-
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+# spring.datasource.url=jdbc:postgresql://localhost:5432/reportdb
+# spring.datasource.username=postgres
+# spring.datasource.password=postgresql
 
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
